fix: overflow on message area

--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -40,7 +40,7 @@ body {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -215,6 +215,7 @@ footer div {
   height: 100%;
   flex-direction: column;
   padding: 100px;
+  overflow: auto;
 }
 /* /right area */
 
